--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,10 +39,16 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/loginBtn"
+            android:id="@+id/checkBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="로그인" />
+
+        <Button
+            android:id="@+id/gotoPasswordResetBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="비밀번호 재설정" />
     </LinearLayout>
 
 </LinearLayout>
