--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:gravity="center"
-        android:text="회원가입"
+        android:text="회원정보"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -21,43 +21,43 @@
         android:padding="30px">
 
         <EditText
-            android:id="@+id/emailEditText"
+            android:id="@+id/nameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:ems="10"
-            android:hint="이메일"
-            android:inputType="textEmailAddress" />
+            android:hint="이름"
+            android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/passwordEditText"
+            android:id="@+id/phoneEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:ems="10"
-            android:hint="비밀번호"
-            android:inputType="textPassword" />
+            android:hint="전화번호"
+            android:inputType="phone" />
 
         <EditText
-            android:id="@+id/passwordCheckEditText"
+            android:id="@+id/birthDayEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:ems="10"
-            android:hint="비밀번호 확인"
-            android:inputType="textPassword" />
+            android:hint="생일"
+            android:inputType="date" />
+
+        <EditText
+            android:id="@+id/editTextTextPostalAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="주소"
+            android:inputType="textPostalAddress" />
 
         <Button
             android:id="@+id/checkBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="회원가입" />
+            android:text="확인" />
 
-        <Button
-            android:id="@+id/gotoLoginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="로그인" />
     </LinearLayout>
 
 </LinearLayout>
