프로필 선택 갤러리 화면 완성

--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -88,6 +88,7 @@
         android:layout_alignParentBottom="true"
         android:elevation="10dp"
         android:visibility="gone"
+        app:cardBackgroundColor="@color/purple_200"
         app:cardCornerRadius="15dp">
 
         <LinearLayout
