--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -35,7 +35,7 @@
         android:background="@color/control_background">
 
         <Button
-            android:id="@+id/picture"
+            android:id="@+id/imageModify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
