--- a/app/src/main/res/layout/activity_user_init.xml
+++ b/app/src/main/res/layout/activity_user_init.xml
@@ -75,7 +75,7 @@
                     android:inputType="date" />
 
                 <EditText
-                    android:id="@+id/editTextTextPostalAddress"
+                    android:id="@+id/AddressEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
